Improved documentation, fixed some npm warnings, added test project.
# Conflicts:
#	tests/test_project/package.json
#	tests/test_project/webmakefile.py

--- a/webmake/package.json
+++ b/webmake/package.json
@@ -1,13 +1,5 @@
 {
-  "name": "webmake",
-  "version": "1.0.0",
-  "description": "",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:bazzisoft/webmake.git"
-  },
-  "author": "Barak Shohat",
-  "license": "MIT",
+  "private": true,
   "dependencies": {
     "browserify": "9.x",
     "cssmin": "0.x",
