--- a/webmake/package.json
+++ b/webmake/package.json
@@ -7,6 +7,7 @@
     "node-sass": "3.x",
     "react-tools": "0.x",
     "reactify": "1.x",
-    "uglify-js": "2.x"
+    "uglify-js": "2.x",
+    "bless": "3.x"
   }
 }
