--- a/webmake/package.json
+++ b/webmake/package.json
@@ -4,7 +4,7 @@
     "browserify": "9.x",
     "cssmin": "0.x",
     "less": "2.x",
-    "node-sass": "3.x",
+    "node-sass": "4.11.0",
     "react-tools": "0.x",
     "reactify": "1.x",
     "uglify-js": "2.x",
