--- a/webmake/package.json
+++ b/webmake/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
