--- a/webmake/package.json
+++ b/webmake/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^8.0.0",
-    "bless": "^3.0.3",
-    "browserify": "^9.0.8",
-    "cssmin": "^0.4.3",
-    "less": "^2.7.3",
-    "node-sass": "^4.12.0",
-    "uglify-es": "^3.3.9"
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "clean-css": "^5.3.0",
+    "clean-css-cli": "^5.6.0",
+    "less": "^4.1.3",
+    "sass": "^1.52.3",
+    "uglify-js": "^3.16.0"
   }
 }
